--- a/app/src/main/res/layout/activity_matriz_datos.xml
+++ b/app/src/main/res/layout/activity_matriz_datos.xml
@@ -70,7 +70,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="8dp"
-                android:text="@string/test_positive"
+                android:text="@string/positive_test"
                 android:textColor="@color/black" />
 
             <EditText
@@ -146,7 +146,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="8dp"
-                android:text="@string/test_negative"
+                android:text="@string/negative_test"
                 android:textColor="@color/black" />
 
             <EditText
