--- a/app/src/main/res/layout/activity_tema.xml
+++ b/app/src/main/res/layout/activity_tema.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
-        android:text="@string/temas"
+        android:text="@string/subjects"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="24sp"
